--- a/i3/config
+++ b/i3/config
@@ -205,12 +205,13 @@ bindsym $mod+x move workspace to output right
 bindsym $mod+z move workspace to output left
 
 #add gaps with i3-gaps
+for_window [class="^.*"] border pixel 3 
 gaps inner 10
-gaps outer 0
+smart_borders on #removes border when only 1 window is open
 
-#remove title bars (Comment this section to reappear title bars)
-default_border pixel 3
-default_floating_border pixel 3
+# Master-stack layout (kind of)
+default_orientation vertical
+for_window [class=".*"] split toggle 
 
 #custom keybinds
 bindsym $mod+F10 exec /$HOME/.config/i3/i3_monitor.sh
@@ -221,6 +222,5 @@ bindsym $mod+Ctrl+l exec i3lock
 bindsym --release $mod+XF86PowerOff exec "systemctl suspend"
 bindsym $mod+F11 exec "brightnessctl set 5%- && notify-send Brightness $(brightnessctl get)"
 bindsym $mod+F12 exec "brightnessctl set +5% && notify-send Brightness $(brightnessctl get)" 
-
 #startup executables
 exec --no-startup-id /$HOME/.config/i3/autostart.sh
