--- a/i3/config
+++ b/i3/config
@@ -25,7 +25,7 @@ font pango:monospace 11
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -c 333333 --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -185,7 +185,7 @@ bar {
 	mode dock
 	#tray_output primary
 	tray_padding 0
-	font pango:Helvetica 12
+	font pango:Hack 11
 	status_command i3blocks
 	colors {
 	      background #242424
