--- a/i3/config
+++ b/i3/config
@@ -23,8 +23,8 @@ font pango:monospace 11
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
-#Screen timeout set to 0s. Change the last digit to change screen timeout.
-exec --no-startup-id xset dpms 300 300 300
+#xset kept to disable power management, no blanking and disable screensaver.
+#kde powerdevil to be used for power management.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
@@ -51,7 +51,9 @@ bindsym $mod+Return exec konsole
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -i -show run
+#bindsym $mod+d exec dmenu_run
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -161,10 +163,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 20 px or 20 ppt
+        bindsym j resize grow height 20 px or 20 ppt
+        bindsym k resize shrink height 20 px or 20 ppt
+        bindsym l resize grow width 20 px or 20 ppt
         #bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
@@ -222,13 +224,17 @@ for_window [class=".*"] split toggle
 #custom keybinds
 bindsym $mod+F10 exec xrandr --auto
 default_floating_border normal
-bindsym $mod+Shift+d exec i3-dmenu-desktop
+#bindsym $mod+Shift+d exec i3-dmenu-desktop
+bindsym $mod+Shift+d exec i3-dmenu-desktop --dmenu='rofi -i -dmenu'
+bindsym $mod+Tab exec rofi -i -show window
 bindsym Print exec gnome-screenshot && sleep 1 && notify-send "Screenshot saved"
 bindsym Shift+Print exec gnome-screenshot -a
 bindsym $mod+Ctrl+l exec loginctl lock-session
 bindsym --release $mod+XF86PowerOff exec "systemctl suspend"
 bindsym $mod+F11 exec "brightnessctl set 5%- && notify-send Brightness $(brightnessctl get)"
 bindsym $mod+F12 exec "brightnessctl set +5% && notify-send Brightness $(brightnessctl get)" 
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus scratchpad show
 
 #startup executables
 exec --no-startup-id /$HOME/.config/i3/autostart.sh
